Fix content overlapping header

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,6 +1,7 @@
 
 .Header {
     position: fixed;
+    z-index: 100;
     background-color: white;
 
     display: flex;
